[tool.poetry]
name = "area_calc"
version = "0.1.0"
description = "ChatGPT hahaha"
authors = ["ChatGPT"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
tk = "^0.1.0"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
