[tool.poetry]
name = "area_calc_gtk"
version = "0.1.0"
description = "ChatGPT hahaha"
authors = ["ChatGPT"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
